# plan

./: .gitignore  ANALISIS_REFACTORIZACION_CLIENT_FACADE.md  COMPARACION_FACADE_REFACTORIZADO.md  ESTRATEGIA_IMPLEMENTACION_FACADE_REFACTORIZADO.md  MEJORAS_RECOMENDADAS_REPOSITORIOS_CLIENTE.md  alembic.ini  client_repository_facade_compatible.py  client_repository_facade_refactored.py  pyproject.toml  test_debug.py  test_health_check.py
alembic/: env.py
alembic/versions/: 467f9d41a818_update_workload_hours_precision.py  a94aa19e97c8_add_is_billable_field_to_workloads.py  e55e9fd7b335_initial_migration.py
docs/: CARACTERISTICAS_APLICACION.md  CLIENT_REPOSITORY_FACADE_ARCHITECTURE.md  CLIENT_REPOSITORY_FACADE_USAGE.md  ESQUEMA_PRUEBAS_MODELOS.md  ESQUEMA_PRUEBAS_SCHEMAS.md  ESTRATEGIA_MIGRACION_LEGACY.md  MEJORAS_RECOMENDADAS_REPOSITORIOS_CLIENTE.md  PLAN_IMPLEMENTACION_TESTING.md  PLAN_MIGRACION_FACADE_POR_FASES.md  PLAN_REORGANIZACION_EMPLOYEE_REPOSITORY.md  REFACTORING_REPOSITORY_PLAN.md  client_available_functions.md  employee_repository_facade copy.py
examples/: client_facade_examples.py
proceso_de_creacion/: 2022-2023 Planning équipes site V2-0.xlsx  DIAGRAMA_ESQUEMA_BD.md  EXPLICACION_TABLAS_CLIENTE.md  HEALTH_CHECKS_IMPLEMENTACION.md  IMPLEMENTACION_PASOS.md  MODELOS_BASE_DATOS.md  MODELOS_BASE_DATOS_DETALLADO.md  PLANTEAMIENTO_APLICACION_FLET.md  README.md  agente.md  agente_flet.md  creador_de_agentes.md  requerimientos del cliente.md
src/planificador/: init_db.py  main.py
src/planificador/config/: config.py  logging_config.py
src/planificador/database/: __init__.py  database.py
src/planificador/database/migrations/: env.py
src/planificador/database/repositories/: README.md  __init__.py  base_repository.py  base_repository_complete_info.md  base_repository_functions_summary.md
src/planificador/exceptions/: README.md  __init__.py  base.py  infrastructure.py  validation.py
src/planificador/exceptions/repository/: __init__.py  alert_repository_exceptions.py  base_repository_exceptions.py  client_repository_exceptions.py  employee_repository_exceptions.py  project_repository_exceptions.py  schedule_repository_exceptions.py  status_code_repository_exceptions.py  team_repository_exceptions.py  vacation_repository_exceptions.py  workload_repository_exceptions.py
src/planificador/models/: MODELS_DOCUMENTATION.md  __init__.py  alert.py  base.py  client.py  employee.py  project.py  project_assignment.py  schedule.py  status_code.py  team.py  team_membership.py  vacation.py  workload.py
src/planificador/repositories/: __init__.py  base_repository.py
src/planificador/repositories/alert/: README.md  __init__.py  alert_available_functions.md  alert_repository_facade.py
src/planificador/repositories/client/: README.md  __init__.py  client_repository_facade.py
src/planificador/repositories/employee/: README.md  employee_available_functions.md  (+1 more)
src/planificador/schemas/: SCHEMAS_DOCUMENTATION.md  __init__.py
src/planificador/services/: README.md  __init__.py
src/planificador/tests/: conftest.py  test_base_exceptions.py  test_fixtures_validation.py
src/planificador/ui/: __init__.py  main_view.py
src/planificador/utils/: __init__.py  date_examples.py  date_utils.py  file_utils.py
(+300 files in other folders)
